--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="minus-btn">-</button>
         <span class="quantity">1</span>
         <button class="plus-btn">+</button>
-        <button class="like-btn loved">
+        <button class="like-btn">
           <img src="./images/heart.png" alt="heart" />
         </button>
         <button class="delete-btn">Delete</button>
@@ -31,7 +31,6 @@
       </div>
       <div class="total">Total: <span id="total-price">$0</span></div>
     </div>
-
-    <script src="main.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
